<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="HumanChoice">Human Choice</string>
    <string name="ComputerChoice">Computer Choice</string>
    <string name="Score">Score: Human 0 Computer 0</string>
    <string name="Rock">Rock</string>
    <string name="Paper">Paper</string>
    <string name="Scissors">Scissors</string>
    <string name="tv_score">Human Score: 0, Computer Score: 0</string>
</resources>